--- a/buttplug.client/build.gradle
+++ b/buttplug.client/build.gradle
@@ -1,7 +1,7 @@
 
 dependencies {
     compile project(':buttplug.core')
-    compile group: 'org.springframework', name: 'spring-core', version: '4.3.10.RELEASE'
-    compile group: 'com.neovisionaries', name: 'nv-websocket-client', version: '2.3'
+    compile group: 'org.eclipse.jetty.websocket', name: 'websocket-client', version: '9.4.50.v20221201'
+    compile group: 'org.eclipse.jetty.websocket', name: 'websocket-api', version: '9.4.50.v20221201'
 }
 
