--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Build with Gradle
       uses: gradle/gradle-build-action@v2.3.3
       with:
-        arguments: build codeCoverageReport uploadArchives
+        arguments: build jacocoTestReport publish
 
     - name: Add coverage to PR
       id: jacoco
