--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,11 +18,15 @@ permissions:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
+    
+    permissions:
+      contents: read
+      pull-requests: write
+      
     steps:
     - uses: actions/checkout@v3
+    
     - name: Set up JDK 8
       uses: actions/setup-java@v3
       with:
