--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ publishing {
     repositories {
         maven {
             name = "GitHubPackages"
-            url = uri("https://maven.pkg.github.com/${System.env.GITHUB_REPOSITORY_OWNER}/${System.env.GITHUB_REPOSITORY}")
+            url = uri("https://maven.pkg.github.com/${System.env.GITHUB_REPOSITORY}")
             credentials {
                 username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
                 password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
