--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,6 +23,7 @@ jobs:
     permissions:
       contents: read
       pull-requests: write
+      packages: write
       
     steps:
     - uses: actions/checkout@v3
