--- a/build.gradle
+++ b/build.gradle
@@ -12,18 +12,19 @@ repositories {
     mavenCentral()
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
 dependencies {
-    api 'org.eclipse.jetty.websocket:websocket-client:9.4.50.v20221201'
-    api 'org.eclipse.jetty.websocket:websocket-api:9.4.50.v20221201'
+    api 'jakarta.websocket:jakarta.websocket-api:1.1.2'
+    api 'org.eclipse.jetty.websocket:websocket-javax-client:10.0.13'
     api 'com.fasterxml.jackson.core:jackson-annotations:2.14.1'
     api 'com.fasterxml.jackson.core:jackson-databind:2.14.1'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
+    testImplementation 'org.eclipse.jetty.websocket:websocket-javax-server:10.0.13'
 }
 
 java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(11)
+    }
     withJavadocJar()
     withSourcesJar()
 }
