--- a/build.gradle
+++ b/build.gradle
@@ -13,12 +13,12 @@ repositories {
 }
 
 dependencies {
-    api 'jakarta.websocket:jakarta.websocket-api:2.1.0'
-    api 'org.eclipse.jetty.websocket:websocket-javax-client:10.0.14'
-    api 'com.fasterxml.jackson.core:jackson-annotations:2.14.2'
-    api 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
-    testImplementation 'org.eclipse.jetty.websocket:websocket-javax-server:10.0.14'
+    api 'jakarta.websocket:jakarta.websocket-api:1.1.2'
+    api 'org.eclipse.jetty.websocket:websocket-javax-client:10.0.13'
+    api 'com.fasterxml.jackson.core:jackson-annotations:2.14.1'
+    api 'com.fasterxml.jackson.core:jackson-databind:2.14.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
+    testImplementation 'org.eclipse.jetty.websocket:websocket-javax-server:10.0.13'
 }
 
 java {
@@ -51,7 +51,6 @@ jacocoTestReport {
     }
 }
 
-
 publishing {
     repositories {
         maven {
@@ -60,6 +59,14 @@ publishing {
             credentials {
                 username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
                 password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
+            }
+        }
+        maven {
+            name = "PackageCloud"
+            url = uri("https://packagecloud.io/blackspherefollower/buttplug4j/java/maven2/")
+            credentials {
+                username = project.findProperty("packagecloud.key") ?: System.getenv("PACKAGECLOUD_TOKEN")
+                password = ""
             }
         }
     }
