--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -47,6 +47,12 @@ jobs:
           paths: ${{ github.workspace }}/build/reports/jacoco/test/jacocoTestReport.xml
           token: ${{ secrets.GITHUB_TOKEN }}
         if: github.event_name == 'pull_request'
+        
+      - id: install-secret-key
+        name: Install gpg secret key
+        run: |
+          cat <(echo -e "${{ secrets.OSSRH_GPG }}") | gpg --batch --import
+          gpg --list-secret-keys --keyid-format LONG
 
       - name: Publish package
         uses: gradle/gradle-build-action@v2.3.3
