build: Add project name refix to artifacts

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,14 @@
 
-subprojects {
+subprojects { project ->
     group = 'io.github.blackspherefollower'
     version = "3.1." + ("${System.env.GITHUB_RUN_NUMBER ?: 1}") + ("${System.env.GITHUB_REF_TYPE}" == "tag" ? "" : "-SNAPSHOT")
+
+    publishing {
+        publications {
+            maven(MavenPublication) {
+                artifactId "buttplug4j.${project.name}"
+                from components.java
+            }
+        }
+    }
 }
