--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,4 @@ include 'buttplug4j.connectors.javax.websocket.common'
 include 'buttplug4j.connectors.javax.websocket.client'
 include 'buttplug4j.connectors.javax.websocket.server'
 include 'buttplug4j.connectors.jetty.websocket.client'
+include 'buttplug4j.utils.mdns'
