--- a/buttplug4j.connectors.javax.websocket.client/build.gradle
+++ b/buttplug4j.connectors.javax.websocket.client/build.gradle
@@ -13,7 +13,9 @@ repositories {
 dependencies {
     api project(':buttplug4j.connectors.javax.websocket.common')
     api 'org.eclipse.jetty.websocket:websocket-javax-client:10.0.25'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.4'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.12.2'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.11.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.2'
 }
 
 java {
