--- a/buttplug4j/build.gradle
+++ b/buttplug4j/build.gradle
@@ -13,7 +13,9 @@ repositories {
 dependencies {
     api 'com.fasterxml.jackson.core:jackson-annotations:2.19.0'
     api 'com.fasterxml.jackson.core:jackson-databind:2.19.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.4'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.12.2'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.11.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.2'
 }
 
 java {
