--- a/buttplug4j/build.gradle
+++ b/buttplug4j/build.gradle
@@ -63,9 +63,10 @@ publishing {
             url = "https://central.sonatype.com/api/v1/publisher/upload?publishingType=AUTOMATIC"
 
             credentials {
-                username = project.findProperty("maven.user") ?: System.getenv("MAVEN_USER")
-                password = project.findProperty("maven.pass") ?: System.getenv("MAVEN_PASS")
+               // username = project.findProperty("maven.user") ?: System.getenv("MAVEN_USER")
+               // password = project.findProperty("maven.pass") ?: System.getenv("MAVEN_PASS")
             }
+            header "Authorization", "Bearer " + project.findProperty("maven.pass") ?: System.getenv("MAVEN_PASS")
         }
     }
     publications {
