--- a/buttplug4j/build.gradle
+++ b/buttplug4j/build.gradle
@@ -66,7 +66,7 @@ publishing {
                // username = project.findProperty("maven.user") ?: System.getenv("MAVEN_USER")
                // password = project.findProperty("maven.pass") ?: System.getenv("MAVEN_PASS")
             }
-            header "Authorization", "Bearer " + project.findProperty("maven.pass") ?: System.getenv("MAVEN_PASS")
+            header "Authorization", ("Bearer " + (project.findProperty("maven.pass") ?: System.getenv("MAVEN_PASS")))
         }
     }
     publications {
