--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,23 @@
+plugins {
+    id("io.github.gradle-nexus.publish-plugin") version "2.0.0"
+}
+
+group = 'io.github.blackspherefollower'
+version = "3.1." + ("${System.env.GITHUB_RUN_NUMBER ?: 1}") + ("${System.env.GITHUB_REF_TYPE}" == "tag" ? "" : "-SNAPSHOT")
+
+nexusPublishing {
+    repositories {
+        sonatype {
+            nexusUrl.set(uri("https://ossrh-staging-api.central.sonatype.com/service/local/"))
+            snapshotRepositoryUrl.set(uri("https://central.sonatype.com/repository/maven-snapshots/"))
+
+            username = project.findProperty("maven.user") ?: System.getenv("MAVEN_USER")
+            password = project.findProperty("maven.pass") ?: System.getenv("MAVEN_PASS")
+        }
+    }
+}
+
 subprojects { project ->
-    group = 'io.github.blackspherefollower'
-    version = "3.1." + ("${System.env.GITHUB_RUN_NUMBER ?: 1}") + ("${System.env.GITHUB_REF_TYPE}" == "tag" ? "" : "-SNAPSHOT")
+    group = this.group
+    version = this.version
 }
