test: Adding intiface-engine based integration tests

--- a/buttplug4j.connectors.javax.websocket.server/build.gradle
+++ b/buttplug4j.connectors.javax.websocket.server/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     api project(':buttplug4j.connectors.javax.websocket.common')
     testImplementation 'org.eclipse.jetty.websocket:websocket-javax-server:10.0.26'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.13.4'
+    testImplementation project(':buttplug4j.utils.test')
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.13.4'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.13.4'
 }
