--- a/settings.gradle
+++ b/settings.gradle
@@ -4,3 +4,4 @@ include 'buttplug4j.connectors.javax.websocket.client'
 include 'buttplug4j.connectors.javax.websocket.server'
 include 'buttplug4j.connectors.jetty.websocket.client'
 include 'buttplug4j.utils.mdns'
+include 'buttplug4j.utils.test'
