test: Fixing up integration tests

--- a/buttplug4j.connectors.jetty.websocket.client/build.gradle
+++ b/buttplug4j.connectors.jetty.websocket.client/build.gradle
@@ -22,11 +22,16 @@ dependencies {
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(8)
+        languageVersion = JavaLanguageVersion.of(11)
     }
     withJavadocJar()
     withSourcesJar()
 }
+
+tasks.compileJava {
+    options.release.set(8)
+}
+
 checkstyle {
     configFile = file("${rootDir}/checkstyle.xml")
     showViolations = false
